[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/res/items/motorbike.tres" type="Texture" id=1]
[ext_resource path="res://scenes/Entities/Items/Bike/Bike.gd" type="Script" id=2]
[ext_resource path="res://assets/spritesheet_n.png" type="Texture" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.99997
height = 17.0

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 352, 1216, 32, 15 )

[sub_resource type="OccluderPolygon2D" id=5]
polygon = PoolVector2Array( -8, 8, -15, 6, -14, -2, -7, -3, -1, -1, 7, -6, 12, -2, 13, 6, 9, 8, 5, 5, -5, 5 )

[sub_resource type="CircleShape2D" id=4]
radius = 18.2483

[node name="Bike" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
light_mask = 7
texture = ExtResource( 1 )
normal_map = SubResource( 3 )

[node name="LightOccluder2D" type="LightOccluder2D" parent="Sprite"]
visible = false
light_mask = 2
occluder = SubResource( 5 )
light_mask = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.075

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
